feat: add auth config
